Fixed mislink at the bottom

--- a/RESUME_GrantMcGovern.tex
+++ b/RESUME_GrantMcGovern.tex
@@ -152,7 +152,7 @@ Student Union, Attractions Committee \\
 %----------------------------------------------------------------------------------------
 
 % Bottom Footer %
-\moveleft.5\hoffset\centerline{{\small\sl This resume was written in \LaTeX. Checkout the source code \color{blue}\underline{\href{http://www.github.com/g12mcgov}{here}.}}}
+\moveleft.5\hoffset\centerline{{\small\sl This resume was written in \LaTeX. Checkout the source code \color{blue}\underline{\href{https://github.com/g12mcgov/resume}{here}.}}}
 
 
 \end{resume}
